<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="#000080"
    >
    <ImageView
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="120dp"
        android:id="@+id/logo1"
        android:background="@drawable/logo1"
        />
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/mainllogin"
        android:layout_below="@+id/logo1"
        android:layout_marginTop="150dp"
        android:background="@color/white"
        android:layout_marginLeft="30dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:text="Register"
            android:textSize="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Silahkan isi form ini untuk melakukan registrasi."
            android:textSize="20dp"
            android:layout_margin="30dp"/>
        <EditText
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/nama"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/nohp"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            />

        <Button
            android:layout_width="140dp"
            android:layout_height="70dp"
            android:text="Register"
            android:textStyle="bold"
            android:backgroundTint="#000080"
            android:id="@+id/register"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="95dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Belum Punya Akun ? "
            android:textSize="20dp"
            android:layout_margin="10dp"/>



    </LinearLayout>


</RelativeLayout>